CAS Update Nullius

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.0
+Date: 08.05.2023
+  Features:
+    - Added support for Nullius.
+  Info:
+    - Please let me know if u find bugs or typos.
+---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 13.02.2023
   Info:
