--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.1
+Date: 11.05.2023
+  Changes:
+    - Colour change for Nullius.
+---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: 08.05.2023
   Features:
