--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.1
-Date: 20.05.2023
+Date: 2023-06-03
   Changes:
     - Colour change for Nullius.
     - Changed the max setting on all chassis for Nullius.
