--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.1
-Date: 2023-06-03
+Date: 03.06.2023
   Changes:
     - Colour change for Nullius.
     - Changed the max setting on all chassis for Nullius.
