--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,17 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.0
+Date: 14.07.2023
+  Features:
+    - Light and Heavy armour recived grids. & settings for those grids.
+  Changes:
+    - Settings values Modular armour.
+    - Settings values IR3.
+  Info:
+    - The IR3 grids and grids from this mods will not load the same settings.
+  Fixes:
+    - NO locales.
+    - EN NO locales for the new section. Correcting the few locales for the settings that changed.
+---------------------------------------------------------------------------------------------------
 Version: 1.1.1
 Date: 03.06.2023
   Changes:
