--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.0
-Date: 2023-07-14
+Date: 14.07.2023
   Features:
     - Light and Heavy armour recived grids. & settings for those grids.
   Changes:
