--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.1
+Date: 16.07.2023
+  Changes:
+    - Mod version required IR3, PA&R,
+  Fixes:
+    - Rare ocation crash if loading incompatibilities with this mod and PA&R.
+---------------------------------------------------------------------------------------------------
 Version: 1.2.0
 Date: 14.07.2023
   Features:
