--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.4
+Date: 14.08.2023
+  Minor Features:
+    - Achievement Description.
+---------------------------------------------------------------------------------------------------
 Version: 1.2.3
-Date: 13.08.2023
+Date: 14.08.2023
   Minor Features:
     - Added Achievement.
   Changes:
