--- a/changelog.txt
+++ b/changelog.txt
@@ -1,11 +1,20 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.5
+Date: 16.08.2023
+  Changes:
+    - Utillity vest from Power Armour MK3 should show regardless of PA&R.
+  Scripting:
+    - Attempt to make Icons show on space suit regarding SE-K2-CAS.
+  Info:
+    - Can't fix icons showing properly. Forced since of Grid revert code.
+---------------------------------------------------------------------------------------------------
 Version: 1.2.4
 Date: 14.08.2023
   Minor Features:
     - Achievement Description.
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.3
-Date: 14.08.2023
+Date: 13.08.2023
   Minor Features:
     - Added Achievement.
   Changes:
