--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,27 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.0
+Date: 03.09.2023
+  Changes:
+    - File structure rework.
+    - Version required for PA&R mod 0.1.39 --> 0.1.47.
+    - Apply correct grid name "sgz-a??-equipment-grid", --> "par-a??-equipment-grid". 
+  Scripting:
+    - Added bobwarfare file.
+    - Added coding-files
+    - Added custome-power-armour file.
+    - Added exotic-industries file.
+    - Added FactorioExtended-Equipment file.
+    - Added hiladder-equipment file.
+    - Added IndustrialRevolution3 file.
+    - Added nullius file.
+    - Added rampant-arsenal file.
+    - Added PowerAndArmor file.
+    - Added Power-Armour-&-Replacer file.
+    - Added Power-Armor-MK3 file.
+    - Added space-exploration-Krastorio2 file.
+  Bugfixes:
+    - Missing equipment icons not showing up correctly.
+---------------------------------------------------------------------------------------------------
 Version: 1.2.5
 Date: 16.08.2023
   Changes:
@@ -6,7 +29,7 @@ Date: 16.08.2023
   Scripting:
     - Attempt to make Icons show on space suit regarding SE-K2-CAS.
   Info:
-    - Can't fix icons showing properly. Forced since of Grid revert code.
+    - ̶C̶a̶n̶'̶t̶ ̶f̶i̶x̶ ̶i̶c̶o̶n̶s̶ ̶s̶h̶o̶w̶i̶n̶g̶ ̶p̶r̶o̶p̶e̶r̶l̶y̶.̶ ̶F̶o̶r̶c̶e̶d̶ ̶s̶i̶n̶c̶e̶ ̶o̶f̶ ̶G̶r̶i̶d̶ ̶r̶e̶v̶e̶r̶t̶ ̶c̶o̶d̶e̶.̶
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.4
 Date: 14.08.2023
@@ -244,7 +267,7 @@ Date: 15.05.2022
     - FactorioExtended-Equipment Armours has now gotten settings.
     - Custom power armour fix has now gotten settings.
   Changes:
-    - Setting order for Rampant Aresnal went from "F" to "I".
+    - Setting order for Rampant Arsenal went from "F" to "I".
     - reduced limit of K2's mk4 Armour from: 500 - 400.
   Bugfixes:
     - Reverted the way K2 changes the grid sizes for SE if both mods are played toghetter.
