--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.4.1
+Date: 14.12.2023
+  Bugfixes:
+    - Changelog Spelling.
+---------------------------------------------------------------------------------------------------
 Version: 1.4.0
 Date: 08.11.2023
   Changes:
@@ -77,7 +82,7 @@ Date: 08.08.2023
     - Added Function to hide the mod setting if P.A.&.R is enabeld.
   Bugfixes:
     - While at it made sure to not crash if settings didn't exsist.
-  Discord-Realese:
+  Discord-Releases:
     - Beta untill PA&R has been done with the few Changes Fetures.  
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.1
@@ -121,13 +126,13 @@ Date: 13.02.2023
     - This mod has gone trought all know implementation it should have. So i see now to release a 1.0 of this mod.
     - New mods may still be added on a later date. For now only bugs and so on will be taken care off.
     - I will not leave it but my main attention is now going towards living life and working towards completing my next project.
-    - That u can find more info about in the "Discord-Realese:" section of this changelog.
+    - That u can find more info about in the "Discord-Releases:" section of this changelog.
   Bugfixes:
     - Changelog.
   Changes:
     - EN locales tool tip.
     - NO locals tool tip.
-  Discord-Realese:
+  Discord-Releases:
     - Want news about: mods, stream's, yt-videos? Head to: https://discord.gg/tbxnpsxkDM.
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.4
@@ -179,11 +184,11 @@ Date: 27.12.2022
 Version: 0.3.0
 Date: 15.10.2022
   Features:
-    - Support for MK10-Armour is good to go. (tool tip for settings comes later) 
+    - Support for MK10-Armour is good to go. (tool tip for settings comes later) (Current name PA&R)
     - Item icons will now show armour icon on the settings menue.
   Bugfixes:
     - Changelog.
-    - typos in locales.
+    - Typos in locales.
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.7
 Date: 13.10.2022
@@ -193,15 +198,15 @@ Date: 13.10.2022
   Modding:
     - IR2. U can now configure grid size for Light & Heavy armour if mod is present. Since IR2 mod adds grids to them.
   Changes:
-    - Internal cleanup in datafinalfixes.
     - Locals Cleanup EN.
     - Removed RU locals as for updates if u want to help use my github.
   Scripting:
+    - Internal cleanup in data-final-fixes.
     - Added data.lua to be read.
     - Info.json verified verion 0.2.7.
-    - Traces of upcoming mod MK10-Armour is added. Mod is not released yet.
+    - Traces of upcoming mod MK10-Armour is added. Mod is not released yet. (Current name PA&R)
   Bugfixes:
-    - attempted fix for known simulations issue.
+    - Attempted fix for known simulations issue.
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.6
 Date: 06.06.2022
@@ -226,7 +231,7 @@ Version: 0.2.4
 Date: 04.06.2022
   Features:
     - NO translation should now be implemented with feature from 0.2.0.
-    - Added Russian Traslation.
+    - Added Russian Translation.
   Thanks:
     - To @implost for helping with RU translations. (Discord).
   Info:
@@ -237,7 +242,7 @@ Date: 03.06.2022
   Bugfixes:
     - Fixed that K2 was depending on SE to be enabled.
   Thanks:
-    - To @implost for helping & solveing the issue (Discord).
+    - To @implost for helping & solving the issue (Discord).
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.2
 Date: 02.06.2022
@@ -292,7 +297,7 @@ Date: 15.05.2022
     - Setting order for Rampant Arsenal went from "F" to "I".
     - reduced limit of K2's mk4 Armour from: 500 - 400.
   Bugfixes:
-    - Reverted the way K2 changes the grid sizes for SE if both mods are played toghetter.
+    - Reverted the way K2 changes the grid sizes for SE if both mods are played together.
     - Fixed NO localisations in general.
     - Fixed NO localisations for "bob-power-armor-mk4-grid-size-w".
   Discord-Realese:
