--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,12 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.4.2
+Date: 07.01.2024
+  Changes:
+    - Requires PAR minimum version 0.2.0
+  Bugfixes:
+    - Issue with item icon for PAR mod.
+    - Item name for PAR
+---------------------------------------------------------------------------------------------------
 Version: 1.4.1
 Date: 14.12.2023
   Bugfixes:
