--- a/changelog.txt
+++ b/changelog.txt
@@ -2,7 +2,7 @@
 Version: 1.4.3
 Date: 13.01.2024
   Changes:
-    - Requires PAR version 0.2.4+
+    - (Optional) Requires PAR version 0.2.4+
     - Achivement texture. 
   Bugfixes:
     - Crash with PA&R.
@@ -10,7 +10,7 @@ Date: 13.01.2024
 Version: 1.4.2
 Date: 07.01.2024
   Changes:
-    - Requires PAR version 0.2.0+
+    - (Optional) Requires PAR version 0.2.0+
   Bugfixes:
     - Issue with item icon for PAR mod.
     - Item name for PAR
