--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.4.4
+Date: 19.05.2024
+  Locale:
+    - Missing Norwegain. suimulation section.
+  Changes:
+    - (Optional) Requires PAR version 0.2.10+
+---------------------------------------------------------------------------------------------------
 Version: 1.4.3
 Date: 13.01.2024
   Changes:
