--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.5.2
+Date: 21.10.2024
+  Bugfixes:
+    - Added missing locals.
+---------------------------------------------------------------------------------------------------
 Version: 1.5.1
 Date: 21.10.2024
   Features:
