--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@ Date: 24.10.2024
   Changes:
     - Disable setting if playing with PAR and SA or future SE.
     - Updated Required optional PAR version to 0.3.2 so it work along with changes on the mod.
+    - Update setting for Mech Armour if using PAR mod.
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.3
 Date: 22.10.2024
