Mech Armour mod

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.5.6
+Date: 20.11.2024
+  Features:
+    - Added settings to mech-armor.
+  Modding:
+    - Support for mech-armor mod.
+---------------------------------------------------------------------------------------------------
 Version: 1.5.5
 Date: 05.12.2024
   Changes:
