--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.5.8
+Date: 12.02.2025
+  Changes:
+    - Temporaly hidden more mods with unknown update state.
+  Bugfixes:
+    - Accidently deleted Light & Heavy armour grids.
+  Info:
+    - Will look in to fix on an issue with qility still effecting armour with grids set at 0.
+---------------------------------------------------------------------------------------------------
 Version: 1.5.7
 Date: 19.01.2025
   Changes:
