--- a/Configurable-Armour-Suits/changelog.txt
+++ b/Configurable-Armour-Suits/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.5.10
+Date: 04.03.2025
+  Changes:
+    - cfg files now represent specific catergories. settings, tips&tricks, Achivements.
+---------------------------------------------------------------------------------------------------
 Version: 1.5.9
 Date: 21.02.2025
   Changes:
