--- a/Configurable-Armour-Suits/changelog.txt
+++ b/Configurable-Armour-Suits/changelog.txt
@@ -1,8 +1,11 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.10
 Date: 04.03.2025
+  Features:
+    - Tips & tricks.
   Changes:
     - cfg files now represent specific catergories. settings, tips&tricks, Achivements.
+    - Dependency version update PAR 0.3.17+. do not update if not both are posted yet.  
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.9
 Date: 21.02.2025
